<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:padding="@dimen/padding_medium">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="@dimen/text_medium"
        android:text="@string/walkthrough_help"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_large"
        android:textColor="@color/red"
        android:text="ABOUT PICTURE HERE"
        android:textStyle="bold"
        android:gravity="center"
        android:padding="@dimen/padding_small"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="@dimen/text_medium"
        android:text="@string/walkthrough_bugs"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_large"
        android:textColor="@color/red"
        android:text="@string/icon_bug"
        android:id="@+id/bug_icon"
        android:textStyle="bold"
        android:gravity="center"
        android:padding="@dimen/padding_small"/>

</LinearLayout>