<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/default_margin"
            android:paddingRight="@dimen/default_margin"
            android:paddingTop="@dimen/padding_micro"
            android:paddingBottom="@dimen/padding_micro">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:text="@string/settings_language"/>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="right|center_vertical"
                android:id="@+id/settings_language"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/default_margin"
            android:paddingRight="@dimen/default_margin"
            android:paddingTop="@dimen/padding_micro"
            android:paddingBottom="@dimen/padding_micro">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/settings_homepage"
                android:textColor="@color/black"/>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="right|center_vertical"
                android:id="@+id/settings_homepage"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/default_margin"
            android:paddingRight="@dimen/default_margin"
            android:paddingTop="@dimen/padding_micro"
            android:paddingBottom="@dimen/padding_micro">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/settings_statistics"
                android:textColor="@color/black"/>

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/settings_statistics"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/settings_help"
            android:background="@drawable/transparent_redpressed"
            android:paddingLeft="@dimen/default_margin"
            android:paddingRight="@dimen/default_margin"
            android:paddingTop="@dimen/padding_micro"
            android:paddingBottom="@dimen/padding_micro">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/help_icon"
                android:gravity="center"
                android:textColor="@color/black_whitepressed"
                android:text="@string/icon_question"
                android:duplicateParentState="true"
                android:paddingRight="@dimen/padding_micro"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_help"
                android:textColor="@color/black_whitepressed"
                android:duplicateParentState="true"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/settings_about"
            android:background="@drawable/transparent_redpressed"
            android:paddingLeft="@dimen/default_margin"
            android:paddingRight="@dimen/default_margin"
            android:paddingTop="@dimen/padding_micro"
            android:paddingBottom="@dimen/padding_micro">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/about_icon"
                android:gravity="center"
                android:textColor="@color/black_whitepressed"
                android:text="@string/icon_info"
                android:duplicateParentState="true"
                android:paddingRight="@dimen/padding_micro"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_about"
                android:textColor="@color/black_whitepressed"
                android:duplicateParentState="true"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/settings_bug"
            android:background="@drawable/transparent_redpressed"
            android:paddingLeft="@dimen/default_margin"
            android:paddingRight="@dimen/default_margin"
            android:paddingTop="@dimen/padding_micro"
            android:paddingBottom="@dimen/padding_micro">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bug_icon"
                android:gravity="center"
                android:textColor="@color/black_whitepressed"
                android:text="@string/icon_bug"
                android:duplicateParentState="true"
                android:paddingRight="@dimen/padding_micro"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_report_bug"
                android:textColor="@color/black_whitepressed"
                android:duplicateParentState="true"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/settings_version"
            android:background="@color/transparent"
            android:textSize="@dimen/text_medium"
            android:textColor="@color/grey"
            android:gravity="center"
            android:textStyle="italic"
            android:padding="@dimen/padding_medium"/>

    </LinearLayout>
</ScrollView>
