<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/walkthrough_container">

    <TextView
        android:id="@+id/walkthrough_close"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/skip"
        android:textColor="@drawable/color_black_redpressed"
        android:textSize="@dimen/text_medium"
        android:gravity="left"
        android:padding="@dimen/padding_small"/>

    <com.viewpagerindicator.CirclePageIndicator
        android:id="@+id/walkthrough_pageindicator"
        android:layout_height="10dp"
        android:layout_width="match_parent"
        android:background="@color/white"/>

    <android.support.v4.view.ViewPager
        android:id="@+id/walkthrough_viewpager"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_width="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingRight="@dimen/padding_large"
        android:paddingLeft="@dimen/padding_large"
        android:paddingTop="@dimen/padding_medium"
        android:paddingBottom="@dimen/padding_medium">

        <TextView
            android:id="@+id/walkthrough_back"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:text="@string/back"
            android:textColor="@drawable/color_black_redpressed"
            android:textSize="@dimen/text_medium"
            android:clickable="true"
            android:gravity="left"/>

        <TextView
            android:id="@+id/walkthrough_next"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:text="@string/next"
            android:textColor="@drawable/color_black_redpressed"
            android:textSize="@dimen/text_medium"
            android:clickable="true"
            android:gravity="right"/>
    </LinearLayout>

</LinearLayout>